--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "showmyprs.com",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "description": "See all your Open Source contributions in one place",
-  "main": "main.go",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "node src/server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/karanjthakkar/showmyprs.com.git"
@@ -18,17 +21,10 @@
     "url": "https://github.com/karanjthakkar/showmyprs.com/issues"
   },
   "homepage": "https://github.com/karanjthakkar/showmyprs.com#readme",
-  "devDependencies": {
-    "autoprefixer": "^6.7.3",
-    "grunt": "^1.0.1",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.0.0",
-    "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-exec": "^1.0.1",
-    "grunt-filerev": "^2.3.1",
-    "grunt-postcss": "^0.8.0",
-    "grunt-usemin": "^3.1.1"
+  "dependencies": {
+    "@hapi/hapi": "^18.4.0",
+    "@octokit/rest": "^16.37.0",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.7.0"
   }
 }
