Fix rewrite to functions

--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,12 @@
 {
   "hosting": {
+    "public": ".",
+    "ignore": [
+      "**"
+    ],
     "rewrites": [{
       "source": "/user/**",
       "function": "user"
-    }],
-    "redirects": [{
-      "source": "/bro",
-      "destination": "https://firebase.google.com/",
-      "type": 302
     }]
   }
 }
