--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.7.0",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
